fixes z-index oddity on social-pick author

--- a/components/sass/modules/_social-pick-red.scss
+++ b/components/sass/modules/_social-pick-red.scss
@@ -92,6 +92,7 @@
       position: relative;
       left: 2.125em;
       top: 50%;
+      z-index: 1;
       transform: translateY(-50%);
       padding-right: 0;
       display: inline-block;
